# Template-Cpp

./: .gitmodules  .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Example.cpp  main.cpp
src/hal/: hal.cpp  register.cpp  register.hpp
src/spi/: CMakeLists.txt  read.cpp  read.hpp  spi.hpp
test/: CMakeLists.txt  ExampleTests2.cpp
tests/: CMakeLists.txt
tests/src/hal/: hal_tests.cpp
tests/src/spi/: CMakeLists.txt  read_tests.cpp  spi_tests.cpp
